--- a/css/styles.css
+++ b/css/styles.css
@@ -9958,7 +9958,7 @@ body {
     padding-top: 0;
     padding-left: 17rem;
   }
-}
+/* }
 h1,
 h2,
 h3,
@@ -9966,7 +9966,7 @@ h4,
 h5,
 h6 {
   text-transform: uppercase;
-}
+} */
 
 h1 {
   line-height: 1;
@@ -10032,28 +10032,7 @@ p.lead {
     display: block;
   }
 }
-/* .social-icons .social-icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  height: 3.5rem;
-  width: 3.5rem;
-  background-color: #41ad49;
-  color: #fff;
-  border-radius: 100%;
-  font-size: 1.5rem;
-  margin-right: 1.5rem;
-}
-.social-icons .social-icon:last-child {
-  margin-right: 0;
-}
-.social-icons .social-icon:hover {
-  background-color: #25408f;
-}
 
-.dev-icons {
-  font-size: 3rem;
-} */
 
 section.resume-section {
   display: flex;
