--- a/css/styles.css
+++ b/css/styles.css
@@ -9958,7 +9958,7 @@ body {
     padding-top: 0;
     padding-left: 17rem;
   }
-/* }
+}
 h1,
 h2,
 h3,
@@ -9966,7 +9966,10 @@ h4,
 h5,
 h6 {
   text-transform: uppercase;
-} */
+  font-size: x-large;
+  font-style: initial;
+  font-family: 'Times New Roman', Times, serif;
+}
 
 h1 {
   line-height: 1;
