--- a/css/styles.css
+++ b/css/styles.css
@@ -9947,17 +9947,17 @@ h3 {
     color: inherit;
     border-color: #dee2e6;
   }
-}
+
 body {
   padding-top: 3.375rem;
   color: #6c757d;
 }
 
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
   body {
     padding-top: 0;
     padding-left: 17rem;
-  }
+  } */
 }
 h1,
 h2,
