--- a/css/styles.css
+++ b/css/styles.css
@@ -9980,12 +9980,12 @@ p.lead {
   font-weight: 400;
 }
 
-/* .subheading {
+.subheading {
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: lowercase;
   font-weight: 500;
   font-size: 1.5rem;
-} */
+}
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
