--- a/css/styles.css
+++ b/css/styles.css
@@ -9755,13 +9755,9 @@ button.bg-dark:focus {
   color: #fff !important;
 }
 
-/* .text-primary {
-  color: #25408f !important;
-} */
-
-a.text-primary:hover, a.text-primary:focus {
+/* a.text-primary:hover, a.text-primary:focus {
   color: #824027 !important;
-}
+} */
 
 .text-secondary {
   color: #6c757d !important;
