--- a/css/styles.css
+++ b/css/styles.css
@@ -9982,7 +9982,7 @@ p.lead {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: lowercase;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 2px solid black;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
