--- a/css/styles.css
+++ b/css/styles.css
@@ -10065,9 +10065,9 @@ section.resume-section {
   padding-bottom: 5rem;
   max-width: 75rem;
 }
-section.resume-section .resume-section-content {
+/* section.resume-section .resume-section-content {
   width: 100%;
-}
+} */
 
 @media (min-width: 768px) {
   section.resume-section {
