--- a/css/styles.css
+++ b/css/styles.css
@@ -10056,7 +10056,7 @@ p.lead {
   font-size: 3rem;
 }
 
-section.resume-section {
+/* section.resume-section {
   display: flex;
   align-items: center;
   padding-left: 1rem;
@@ -10064,10 +10064,10 @@ section.resume-section {
   padding-top: 5rem;
   padding-bottom: 5rem;
   max-width: 75rem;
-}
-/* section.resume-section .resume-section-content {
-  width: 100%;
 } */
+section.resume-section .resume-section-content {
+  width: 100%;
+}
 
 @media (min-width: 768px) {
   section.resume-section {
