--- a/css/styles.css
+++ b/css/styles.css
@@ -10032,8 +10032,8 @@ p.lead {
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
   }
-}
-.social-icons .social-icon {
+
+/* .social-icons .social-icon {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -10050,13 +10050,13 @@ p.lead {
 }
 .social-icons .social-icon:hover {
   background-color: #25408f;
-}
+} */
 
 .dev-icons {
   font-size: 3rem;
 }
 
-/* section.resume-section {
+section.resume-section {
   display: flex;
   align-items: center;
   padding-left: 1rem;
@@ -10064,7 +10064,7 @@ p.lead {
   padding-top: 5rem;
   padding-bottom: 5rem;
   max-width: 75rem;
-} */
+}
 section.resume-section .resume-section-content {
   width: 100%;
 }
