--- a/css/styles.css
+++ b/css/styles.css
@@ -10052,9 +10052,9 @@ p.lead {
   background-color: #25408f;
 } */
 
-.dev-icons {
+/* .dev-icons {
   font-size: 3rem;
-}
+} */
 
 section.resume-section {
   display: flex;
