--- a/css/styles.css
+++ b/css/styles.css
@@ -9850,10 +9850,10 @@ a.text-dark:hover, a.text-dark:focus {
 .visible {
   visibility: visible !important;
 }
-
+/* 
 .invisible {
   visibility: hidden !important;
-}
+} */
 
 @media print {
   *,
@@ -9954,11 +9954,11 @@ body {
   color: #6c757d;
 }
 
-/* @media (min-width: 992px) {
+@media (min-width: 992px) {
   body {
     padding-top: 0;
     padding-left: 17rem;
-  } */
+  }
 }
 h1,
 h2,
