--- a/css/styles.css
+++ b/css/styles.css
@@ -9847,9 +9847,9 @@ a.text-dark:hover, a.text-dark:focus {
   color: inherit !important;
 }
 
-.visible {
+/* .visible {
   visibility: visible !important;
-}
+} */
 /* 
 .invisible {
   visibility: hidden !important;
