--- a/css/styles.css
+++ b/css/styles.css
@@ -9633,9 +9633,9 @@ button.bg-dark:focus {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
 }
 
-.text-justify {
+/* .text-justify {
   text-align: justify !important;
-}
+} */
 
 
 
