--- a/css/styles.css
+++ b/css/styles.css
@@ -9629,9 +9629,9 @@ button.bg-dark:focus {
   background-color: rgba(0, 0, 0, 0);
 }
 
-.text-monospace {
+/* .text-monospace {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
-}
+} */
 
 /* .text-justify {
   text-align: justify !important;
