--- a/css/styles.css
+++ b/css/styles.css
@@ -7991,10 +7991,10 @@ button.bg-dark:focus {
     margin-top: 1.5rem !important;
   }
 
-  .mr-sm-4,
+  /* .mr-sm-4,
 .mx-sm-4 {
     margin-right: 1.5rem !important;
-  }
+  } */
 
 
 
