--- a/css/styles.css
+++ b/css/styles.css
@@ -7373,7 +7373,7 @@ button.bg-dark:focus {
   white-space: normal;
 }
 
-.shadow-sm {
+/* .shadow-sm {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 
@@ -7994,7 +7994,7 @@ button.bg-dark:focus {
   /* .mr-sm-4,
 .mx-sm-4 {
     margin-right: 1.5rem !important;
-  } */
+  } */ */
 
 
 
