--- a/css/styles.css
+++ b/css/styles.css
@@ -7335,23 +7335,13 @@ button.bg-dark:focus {
   z-index: 1030;
 }
 
-.fixed-bottom {
+/* .fixed-bottom {
   position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 1030;
-}
-
-/* @supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sticky-top {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 1020;
-  } */
-
-
+} */
 
 
 
