--- a/css/styles.css
+++ b/css/styles.css
@@ -6910,7 +6910,7 @@ button.bg-dark:focus {
   .align-content-md-around {
     align-content: space-around !important;
   }
-
+/* 
   .align-content-md-stretch {
     align-content: stretch !important;
   }
@@ -7331,14 +7331,6 @@ button.bg-dark:focus {
   position: fixed;
   top: 0;
   right: 0;
-  left: 0;
-  z-index: 1030;
-}
-
-/* .fixed-bottom {
-  position: fixed;
-  right: 0;
-  bottom: 0;
   left: 0;
   z-index: 1030;
 } */
