--- a/css/styles.css
+++ b/css/styles.css
@@ -6271,7 +6271,7 @@ button.bg-dark:focus {
   display: none !important;
 }
 
-/* .d-inline {
+.d-inline {
   display: inline !important;
 }
 
@@ -6745,7 +6745,7 @@ button.bg-dark:focus {
   .align-content-md-around {
     align-content: space-around !important;
   }
- */
+
 
 
 
