--- a/css/styles.css
+++ b/css/styles.css
@@ -4998,7 +4998,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #212529;
   background-color: #e9ecef;
 }
-
+/* 
 .list-group-item {
   position: relative;
   display: block;
@@ -5942,7 +5942,7 @@ a.close.disabled {
   border-bottom: 10px solid transparent;
   opacity: 0.5;
   transition: opacity 0.6s ease;
-}
+} */
 @media (prefers-reduced-motion: reduce) {
   .carousel-indicators li {
     transition: none;
