--- a/css/styles.css
+++ b/css/styles.css
@@ -3977,7 +3977,7 @@ input[type=button].btn-block {
   padding-right: 0;
   padding-left: 0;
 }
-/* .navbar-nav .dropdown-menu {
+/* /* .navbar-nav .dropdown-menu {
   position: static;
   float: none;
 }
@@ -4004,7 +4004,7 @@ input[type=button].btn-block {
 }
 .navbar-toggler:hover, .navbar-toggler:focus {
   text-decoration: none;
-}
+} */
 
 .navbar-toggler-icon {
   display: inline-block;
