--- a/css/styles.css
+++ b/css/styles.css
@@ -2999,7 +2999,7 @@ input[type=button].btn-block {
     right: auto;
     left: 0;
   }
-
+/* 
   .dropdown-menu-sm-right {
     right: 0;
     left: auto;
@@ -3738,7 +3738,7 @@ input[type=button].btn-block {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
           appearance: none;
-}
+} */
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-webkit-slider-thumb {
     -webkit-transition: none;
