--- a/css/styles.css
+++ b/css/styles.css
@@ -5934,7 +5934,7 @@ p.lead {
 }
 
 .subheading {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   text-transform: lowercase;
   font-weight: 200;
   font-size: 2px solid black;
