--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color:orange;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
