--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ sup {
 
 a {
   color:green;
-  text-decoration: #212529;
+  text-decoration: none;
   background-color: transparent;
 }
 a:hover {
@@ -134,7 +134,7 @@ a:not([href]):hover {
   text-decoration: none;
 }
 
-pre,
+/* pre,
 code,
 kbd,
 samp {
@@ -242,7 +242,7 @@ button::-moz-focus-inner,
 [type=submit]::-moz-focus-inner {
   padding: 0;
   border-style: none;
-}
+} */
 
 input[type=radio],
 input[type=checkbox] {
