--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ button::-moz-focus-inner,
   border-style: none;
 } */
 
-input[type=radio],
+/* input[type=radio],
 input[type=checkbox] {
   box-sizing: border-box;
   padding: 0;
@@ -374,7 +374,7 @@ h6, .h6 {
   font-size: 3.5rem;
   font-weight: 300;
   line-height: 1.2;
-}
+} */
 
 hr {
   margin-top: 1rem;
