--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-/* article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block;
-} */
+
 
 body {
   margin: 0;
@@ -46,7 +44,7 @@ p {
   margin-bottom: 1rem;
 }
 
-abbr[title],
+/* abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
@@ -123,7 +121,7 @@ a {
 a:hover {
   color: #824027;
   text-decoration: underline;
-}
+} */
 
 a:not([href]) {
   color: inherit;
