--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ h2, .h2 {
   font-size: 3.5rem;
 }
 
-h3, .h3 {
+/* h3, .h3 {
   font-size: 2rem;
 }
 
@@ -107,7 +107,7 @@ h6, .h6 {
   font-size: 3.5rem;
   font-weight: 300;
   line-height: 1.2;
-} */
+} */ */
 
 hr {
   margin-top: 1rem;
