--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-small,
+/* small,
 .small {
   font-size: 80%;
   font-weight: 400;
@@ -994,7 +994,7 @@ pre code {
   .col-lg-10 {
     flex: 0 0 83.3333333333%;
     max-width: 83.3333333333%;
-  }
+  } */
 
   .col-lg-11 {
     flex: 0 0 91.6666666667%;
