--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ hr {
     max-width: 91.6666666667%;
   }
 
-  .col-lg-12 {
+  /* .col-lg-12 {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -998,7 +998,7 @@ textarea.form-control {
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
   border-color: #28a745;
-}
+} */
 .was-validated .custom-file-input:valid:focus ~ .custom-file-label, .custom-file-input.is-valid:focus ~ .custom-file-label {
   border-color: #28a745;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
