--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ hr {
 .navbar-dark .navbar-nav .nav-link.active {
   color: #fff;
 }
-.navbar-dark .navbar-toggler {
+/* .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.5);
   border-color: rgba(255, 255, 255, 0.1);
 }
@@ -1115,7 +1115,7 @@ a.bg-success:hover, a.bg-success:focus,
 button.bg-success:hover,
 button.bg-success:focus {
   background-color: #1e7e34 !important;
-}
+} */
 
 .bg-info {
   background-color: #17a2b8 !important;
