--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,7 @@ hr {
     display: inline-flex !important;
   }
 
-
+/* 
 .align-content-start {
   align-content: flex-start !important;
 }
@@ -828,7 +828,7 @@ hr {
 
   .align-content-md-around {
     align-content: space-around !important;
-  }
+  } */
 
 
 
