--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 }
 
 html {
-  font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -15,7 +14,7 @@ html {
 
 body {
   margin: 0;
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -43,7 +42,6 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-
 
 
 a:not([href]) {
@@ -537,7 +535,7 @@ hr {
 
 
 
-  
+
 
 
 
