--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: #fff;
 }
 
 
@@ -15,10 +15,10 @@ html {
 body {
   margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 1rem;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #fff;
   text-align: left;
   background-color:greenyellow;
 }
@@ -112,7 +112,7 @@ hr {
   .navbar-expand-lg .navbar-toggler {
     display: none;
   }
-}
+
 @media (max-width: 1199.98px) {
   .navbar-expand-xl > .container,
 .navbar-expand-xl > .container-fluid,
@@ -586,9 +586,7 @@ h3 {
     page-break-after: avoid;
   } */
 
-  @page {
-    size: a3;
-  }
+  
   body {
     min-width: 992px !important;
   }
